Add option to auto-extract

--- a/config/nobody/rtorrent/config/rtorrent.rc
+++ b/config/nobody/rtorrent/config/rtorrent.rc
@@ -2,6 +2,12 @@
 # ~/.rtorrent.rc and enable/modify the options as needed. Remember to
 # uncomment the options you wish to enable.
 
+# gets the full path of data of a torrent (it's a workaround for the possibly empty 'd.base_path' attribute)
+method.insert = d.data_path, simple, "if=(d.is_multi_file), (cat,(d.directory),/), (cat,(d.directory),/,(d.$
+
+# Extract when finsihed
+# method.set_key=event.download.finished,filebot,"execute.throw.bg={/hom/nobody/unrarall.sh,$d.base_path=,$d.n$
+
 # Maximum number of simultaneous downloads and uploads slots (global slots!) (`max_downloads_global`, `max_uploads_global`)
 #
 #throttle.max_downloads.global.set = 300
