--- a/config/nobody/rtorrent/config/rtorrent.rc
+++ b/config/nobody/rtorrent/config/rtorrent.rc
@@ -6,7 +6,7 @@
 method.insert = d.data_path, simple, "if=(d.is_multi_file), (cat,(d.directory),/), (cat,(d.directory),/,(d.$
 
 # Extract when finsihed
-# method.set_key=event.download.finished,filebot,"execute.throw.bg={/hom/nobody/unrarall.sh,$d.base_path=,$d.n$
+# method.set_key=event.download.finished,filebot,"execute.throw.bg={/home/nobody/unrarall.sh,$d.base_path=,$d.n$
 
 # Maximum number of simultaneous downloads and uploads slots (global slots!) (`max_downloads_global`, `max_uploads_global`)
 #
